--- a/plugin-dev/koa-react/plugins/backend-index.js.hbs
+++ b/plugin-dev/koa-react/plugins/backend-index.js.hbs
@@ -9,6 +9,7 @@ const bodyParser = require('koa-bodyparser');
 const mongoose = require('mongoose');
 const serve = require('koa-static');
 const path = require('path');
+const loginRoutes = require('./routes/login');
 {{#each entityRouteImport as |routeImport|}}
 {{{routeImport}}}
 {{/each}}
@@ -16,6 +17,21 @@ const User = require("./models/user.js")
 const { jwtMiddleware } = require('./config/auth');
 
 const app = new Koa();
+
+if (process.env.NODE_ENV === 'development') {
+
+  // When developing locally, allow from CORS calls on a different port
+  const cors = require('@koa/cors');
+  const allowedOrigin = process.env.FRONTEND_URL || 'http://localhost:3000';
+
+
+  console.log(`Development mode: Enabling CORS from ${allowedOrigin}`);
+
+  app.use(cors({
+    origin: allowedOrigin,  // Set the allowed origin from environment variable
+    credentials: true,  // Allow credentials (e.g., cookies, authorization headers)
+  }));
+}
 
 const MONGODB_URI = process.env.MONGODB_URI;
 
@@ -33,7 +49,8 @@ mongoose.connect(MONGODB_URI, {
       const adminUser = new User({
         username: 'admin',
         password: '1234',
-        role: 'Admin',
+        email: 'admin@example.com',
+        roles: ['admin'],
       });
 
       adminUser.save().then(() => {
@@ -64,7 +81,8 @@ app.use(async (ctx, next) => {
 });
 
 // Prefix API routes with /api/v1
-{{#each entities as |entity|}}
+app.use(loginRoutes.routes()).use(loginRoutes.allowedMethods());
+{{#each model.entities as |entity|}}
 app.use({{lowercase entity.name}}Routes.routes()).use({{lowercase entity.name}}Routes.allowedMethods());
 {{/each}}
 
