--- a/plugin-dev/koa-react/plugins/Entity/frontend-src-pages-crud-page.js.hbs
+++ b/plugin-dev/koa-react/plugins/Entity/frontend-src-pages-crud-page.js.hbs
@@ -32,7 +32,7 @@ const {{class.name}}Page = () => {
   };
 
   return (
-    <div class="CrudPage">
+    <div className="CrudPage">
       <h1>{{class.pluralName}}</h1>
       {!showForm && (
         <Button onClick={handleCreate} mb="md">
