--- a/plugin-dev/koa-react/plugins/Entity/backend-models-schema.js.hbs
+++ b/plugin-dev/koa-react/plugins/Entity/backend-models-schema.js.hbs
@@ -7,11 +7,34 @@ const mongoose = require('mongoose');
 const bcrypt = require('bcryptjs');
 {{/if}}
 
+{{#if (isNonEmptyArray class.embeddedClasses)}}
+//
+// Embedded classes
+//
+{{#each class.embeddedClasses as |embeddedClass|}}
+const {{lowercase embeddedClass.name}}Schema = new mongoose.Schema({
+{{#each embeddedClass.attributes as |attrib|}}  
+   {{attrib.jsIdentifierName}}: { type: 
+     {{~#if attrib.isArray}} [{{/if}} {{{attrib.mongooseType}}} {{~#if attrib.isArray}} ]{{/if~}}
+
+     {{~#if attrib.type.isEnum}}, enum: {{{attrib.type.jsOptionList}}} {{~/if~}}
+
+     {{~#if attrib.hasMinValue}}, min: {{{attrib.minValue}}} {{~/if~}}
+
+     {{~#if attrib.hasMaxValue}}, max: {{{attrib.maxValue}}} {{~/if~}}
+
+     , required: {{attrib.isRequired}} },
+{{/each}}  
+});
+
+{{/each}}
+{{/if}}
+
 const {{lowercase class.name}}Schema = new mongoose.Schema({
 {{#each class.attributes as |attrib|}}  
   {{attrib.jsIdentifierName}}: { type: 
 
-     {{~#if attrib.isArray}}[{{/if~}} '{{attrib.type.mongooseType}}' {{~#if attrib.isArray}}]{{/if~}}
+     {{~#if attrib.isArray}} [{{/if}} {{{attrib.mongooseType}}} {{~#if attrib.isArray}} ]{{/if~}}
 
      {{~#if attrib.type.isEnum}}, enum: {{{attrib.type.jsOptionList}}} {{~/if~}}
 
