ENH: koa-react dbIndex support
Attributes tagged with "dbIndex=true" will have an "index" attribute generated in its Mongoose schema definition

--- a/plugin-dev/koa-react/plugins/Entity/backend-models-schema.js.hbs
+++ b/plugin-dev/koa-react/plugins/Entity/backend-models-schema.js.hbs
@@ -42,6 +42,10 @@ const {{lowercase class.name}}Schema = new mongoose.Schema({
 
      {{~#if attrib.hasMaxValue}}, max: {{{attrib.maxValue}}} {{~/if~}}
 
+     {{~#if attrib.hasIndex~}}
+     , index: true
+     {{~/if~}}
+
      {{~#if attrib.isUnique~}}
      , unique: true
      {{~/if~}}
