--- a/plugin-dev/koa-react/plugins/backend-package.json.hbs
+++ b/plugin-dev/koa-react/plugins/backend-package.json.hbs
@@ -6,7 +6,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon  --watch routes --watch models index.js",
+    "dev": "nodemon  --watch routes --watch models --watch controllers --watch config index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
