--- a/plugin-dev/koa-react/plugins/frontend-package.json.hbs
+++ b/plugin-dev/koa-react/plugins/frontend-package.json.hbs
@@ -7,6 +7,7 @@
     "@mantine/core": "^7.12.1",
     "@mantine/dates": "^7.12.1",
     "@mantine/hooks": "^7.12.1",
+    "@mantine/form": "^7.12.1",
     "@tabler/icons-react": "^3.12.0",
     "axios": "^1.7.4",
     "mantine-datatable": "^7.11.3",
