--- a/plugin-dev/koa-react/plugins/Entity/backend-controllers-Dao.js.hbs
+++ b/plugin-dev/koa-react/plugins/Entity/backend-controllers-Dao.js.hbs
@@ -3,6 +3,9 @@
 // Do not modify this file.
 //
 const {{class.name}} = require('{{class.relativeParentPrefix}}/models/{{class.packageDirPath}}{{lowercase class.name}}');
+{{#each class.singleEntityAttribs as |attrib|}}
+const {{attrib.type.metaClass.name}} = require('{{../class.relativeParentPrefix}}/models/{{attrib.type.metaClass.packageDirPath}}{{lowercase attrib.type.metaClass.name}}');
+{{/each}}
 
 // Get all {{lowercase class.pluralName}} with pagination
 exports.getAll{{class.pluralName}} = async (ctx) => {
@@ -24,7 +27,13 @@ exports.getAll{{class.pluralName}} = async (ctx) => {
 // Get a {{lowercase class.name}} by ID
 exports.get{{class.name}}ById = async (ctx) => {
   try {
-    const {{lowercase class.name}} = await {{class.name}}.findById(ctx.params.id);
+    const {{lowercase class.name}} = await {{class.name}}.findById(ctx.params.id)
+{{~#if class.singleEntityAttribs.length~}}
+{{~#each class.singleEntityAttribs as |attrib|~}}
+      .populate('{{lowercase attrib.name}}')
+{{~/each~}}
+{{~/if~}}    
+;
     if (!{{lowercase class.name}}) {
       ctx.throw(404, '{{class.name}} not found');
     }
@@ -34,10 +43,48 @@ exports.get{{class.name}}ById = async (ctx) => {
   }
 };
 
+{{#if class.singleEntityAttribs.length}}
+exports.normalize{{class.name}} = async (ctx) => {
+
+  let {{lowercase class.name}}Data = { ...ctx.request.body };
+
+  {{#each class.singleEntityAttribs as |attrib|}}
+  let {{attrib.name}}Id = null;    
+  if ({{lowercase ../class.name}}Data.{{attrib.name}} && typeof {{lowercase ../class.name}}Data.{{attrib.name}} === 'object') {
+      const {{attrib.name}}Data = {{lowercase ../class.name}}Data.{{attrib.name}};
+
+      // Try to find an existing {{lowercase attrib.type.metaClass.name}}
+      let {{attrib.name}} = null;
+
+      if ({{attrib.name}}Data._id) {
+         {{attrib.name}} = await {{attrib.type.metaClass.name}}.findByIdAndUpdate({{attrib.name}}Data._id, {{attrib.name}}Data, { new: true, upsert: true });
+      }
+      else {
+         {{attrib.name}} = new {{attrib.type.metaClass.name}}({{attrib.name}}Data);
+         await {{attrib.name}}.save();
+      }
+
+      // Use the _id of the existing or newly created {{lowercase attrib.type.metaClass.name}}
+      {{attrib.name}}Id = {{attrib.name}}._id;
+  }
+  {{lowercase ../class.name}}Data.{{attrib.name}} = {{attrib.name}}Id;
+
+  {{/each}}
+  return {{lowercase class.name}}Data;
+}
+
+{{/if~}}
+
 // Create a new {{lowercase class.name}}
 exports.create{{class.name}} = async (ctx) => {
   try {
-    const {{lowercase class.name}} = new {{class.name}}(ctx.request.body);
+    const {{lowercase class.name}}Data = 
+{{~#if class.singleEntityAttribs.length}}
+ await exports.normalize{{class.name}}(ctx);
+{{else}}
+ ctx.request.body;
+{{/if}}
+    const {{lowercase class.name}} = new {{class.name}}({{lowercase class.name}}Data);
     await {{lowercase class.name}}.save();
     ctx.status = 201;
     ctx.body = {{lowercase class.name}};
@@ -50,7 +97,13 @@ exports.create{{class.name}} = async (ctx) => {
 // Update a {{lowercase class.name}} by ID
 exports.update{{class.name}} = async (ctx) => {
   try {
-    const {{lowercase class.name}} = await {{class.name}}.findByIdAndUpdate(ctx.params.id, ctx.request.body, { new: true });
+    const {{lowercase class.name}}Data = 
+{{~#if class.singleEntityAttribs.length}}
+ await exports.normalize{{class.name}}(ctx);
+{{else}}
+ ctx.request.body;
+{{/if}}    
+    const {{lowercase class.name}} = await {{class.name}}.findByIdAndUpdate(ctx.params.id, {{lowercase class.name}}Data, { new: true });
     if (!{{lowercase class.name}}) {
       ctx.throw(404, '{{class.name}} not found');
     }
