FIX: koa-react user form should not use array editor
The User roles attribute is an array of an enumeration. This data type is set to use a MultiSelect control, and thus should not use an array editor to represent it.

--- a/plugin-dev/koa-react/plugins/Entity/frontend-src-components-form.js.hbs
+++ b/plugin-dev/koa-react/plugins/Entity/frontend-src-components-form.js.hbs
@@ -35,7 +35,7 @@
 
 {{~#* inline "inputObject" ~}}
 {{#each attributes as |attrib|}}
-{{#if attrib.isArray}}
+{{#if attrib.useArrayEditor}}
 {{../indent}}<{{uppercaseFirst (camelCase (concat ../varPrefix "." (singularOf attrib.jsIdentifierName) ".Array.Editor"))}} />
 
 {{else if attrib.isObject}}
@@ -117,7 +117,7 @@
 
 {{~#* inline "declareArrayEditors" ~}}
 {{#each attributes as |attrib|}}
-{{#if attrib.isArray }}
+{{#if attrib.useArrayEditor }}
 {{> arrayEditor attrib=attrib varName=(concat varPrefix attrib.jsIdentifierName) }}
 {{else if attrib.isObject }}
 {{> declareArrayEditors attributes=attrib.type.metaClass.attributes varPrefix=(concat ../varPrefix attrib.jsIdentifierName ".") }}
