FIX: koa-react special data types requires transforms during editing
Certain data types (dates, boolean "YesNo", etc.) required transformations from their JSON representation before and/or after editing on the form.  Datatypes can now define a mantineTransformPre and/or mantineTransformPost functions that will generate transformation code in the editing form.

--- a/plugin-dev/koa-react/plugins/Entity/frontend-src-components-form.js.hbs
+++ b/plugin-dev/koa-react/plugins/Entity/frontend-src-components-form.js.hbs
@@ -152,6 +152,11 @@ const {{class.name}}Form = ({ {{lowercase class.name}}Id, onSave, onCancel }) =>
     if ({{lowercase class.name}}Id) {
       // Load {{lowercase class.name}} data for editing
       fetch{{class.name}}ById({{lowercase class.name}}Id).then((data) => { 
+{{#each class.attributes as |attrib|}}
+{{#if attrib.type.mantineTransformPre}}
+        data.{{attrib.name}} = {{{eval attrib.type.mantineTransformPre (concat "data." attrib.name)}}};
+{{/if}}
+{{/each}}        
         form.setValues(data);
         form.resetDirty(data);        
       });
@@ -160,6 +165,11 @@ const {{class.name}}Form = ({ {{lowercase class.name}}Id, onSave, onCancel }) =>
 
 
   const handleSubmit = (values) => {
+{{#each class.attributes as |attrib|}}
+{{#if attrib.type.mantineTransformPost}}
+    values.{{attrib.name}} = {{{eval attrib.type.mantineTransformPost (concat "values." attrib.name)}}};
+{{/if}}
+{{/each}}        
     if ({{lowercase class.name}}Id) {
       update{{class.name}}({{lowercase class.name}}Id, values).then(onSave);
     } else {
